# cloud-hypervisor-client

./: .gitignore  Cargo.toml  README.md
examples/: get_info.rs
generator/: .gitignore  Cargo.toml  README.md
generator/src/: main.rs  tracing_init.rs
generator/workdir/: openapi-generator.yaml  templates.diff
generator/workdir/templates/: request.rs
generator/workdir/templates/hyper/: api_mod.mustache
src/: lib.rs
src/apis/: configuration.rs  default_api.rs  mod.rs  request.rs
src/models/: cpus_config.rs  disk_config.rs  mod.rs  net_config.rs  rate_limit_group_config.rs  rate_limiter_config.rs  vm_config.rs  vm_info.rs
