[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assertr = "0.1.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
yaml-rust2 = "0.10.1"
sha1 = "0.10.6"
hex = "0.4.3"
